; ModuleID = '/home/carl/AnghaBench/linux/samples/bpf/extr_tracex6_kern.c_bpf_prog1.c'
source_filename = "/home/carl/AnghaBench/linux/samples/bpf/extr_tracex6_kern.c_bpf_prog1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pt_regs = type { i32 }

@counters = common dso_local global i32 0, align 4
@values = common dso_local global i32 0, align 4
@BPF_NOEXIST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bpf_prog1(%struct.pt_regs* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.pt_regs*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i32, align 4
  store %struct.pt_regs* %0, %struct.pt_regs** %3, align 8
  %8 = call i32 (...) @bpf_get_smp_processor_id()
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call i64 @bpf_perf_event_read(i32* @counters, i32 %9)
  store i64 %10, i64* %5, align 8
  %11 = load i64, i64* %5, align 8
  %12 = trunc i64 %11 to i32
  store i32 %12, i32* %7, align 4
  %13 = load i32, i32* %7, align 4
  %14 = icmp sle i32 %13, -2
  br i1 %14, label %15, label %19

15:                                               ; preds = %1
  %16 = load i32, i32* %7, align 4
  %17 = icmp sge i32 %16, -22
  br i1 %17, label %18, label %19

18:                                               ; preds = %15
  store i32 0, i32* %2, align 4
  br label %30

19:                                               ; preds = %15, %1
  %20 = call i64* @bpf_map_lookup_elem(i32* @values, i32* %4)
  store i64* %20, i64** %6, align 8
  %21 = load i64*, i64** %6, align 8
  %22 = icmp ne i64* %21, null
  br i1 %22, label %23, label %26

23:                                               ; preds = %19
  %24 = load i64, i64* %5, align 8
  %25 = load i64*, i64** %6, align 8
  store i64 %24, i64* %25, align 8
  br label %29

26:                                               ; preds = %19
  %27 = load i32, i32* @BPF_NOEXIST, align 4
  %28 = call i32 @bpf_map_update_elem(i32* @values, i32* %4, i64* %5, i32 %27)
  br label %29

29:                                               ; preds = %26, %23
  store i32 0, i32* %2, align 4
  br label %30

30:                                               ; preds = %29, %18
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i32 @bpf_get_smp_processor_id(...) #1

declare dso_local i64 @bpf_perf_event_read(i32*, i32) #1

declare dso_local i64* @bpf_map_lookup_elem(i32*, i32*) #1

declare dso_local i32 @bpf_map_update_elem(i32*, i32*, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
